Updated validation. Each field is now checked to ensure it's filled in. Additionally, if High School is selected as education type, then the Subject of the education will no longer be visible.